--- a/resources/icomoon/demo.html
+++ b/resources/icomoon/demo.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="style.css"></head>
 <body>
 	<div class="bgc1 clearfix">
-		<h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> icomoon <small class="fgc1">(Glyphs:&nbsp;49)</small></h1>
+		<h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> icomoon <small class="fgc1">(Glyphs:&nbsp;51)</small></h1>
 	</div>
 	<div class="clearfix mhl ptl">
 		<h1 class="mvm mtn fgc1">Grid Size: Unknown</h1>
@@ -791,6 +791,38 @@
 			<fieldset class="fs0 size1of1 clearfix hidden-true">
 				<input type="text" readonly value="e630" class="unit size1of2" />
 				<input type="text" maxlength="1" readonly value="&#xe630;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix hidden-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="icon-icon-clarity">
+				
+				</span>
+				<span class="mls"> icon-icon-clarity</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix hidden-true">
+				<input type="text" readonly value="e631" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe631;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix hidden-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="icon-icon-clarity-shield">
+				
+				</span>
+				<span class="mls"> icon-icon-clarity-shield</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix hidden-true">
+				<input type="text" readonly value="e632" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe632;" class="unitRight size1of2 talign-right" />
 			</fieldset>
 			<div class="fs0 bshadow0 clearfix hidden-true">
 				<span class="unit pvs fgc1">liga: </span>
